# files

./: meson.build
filechooser-module/: meson.build
libcore/: UndoAction.vala  UndoManager.vala  meson.build
libcore/tests/MarlinIconInfoTests/: meson.build
libwidgets/: meson.build
pantheon-files-daemon/: meson.build
plugins/contractor/: meson.build
plugins/pantheon-files-ctags/: meson.build
plugins/pantheon-files-trash/: meson.build
src/: meson.build
